docker-spring-boot/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: springboot
  name: app-deploy
spec:
  selector:
    matchLabels:
      app: springboot
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - image: spring-boot:1.0
        imagePullPolicy: Never
        name: springboot-app
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
