docker-spring-boot/k8s/deployment_bkp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"springboot"},"name":"app-deploy","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"springboot"}},"template":{"metadata":{"labels":{"app":"springboot"}},"spec":{"containers":[{"image":"spring-boot:1.0","imagePullPolicy":"Never","name":"springboot-app","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: "2023-04-26T12:49:08Z"
  generation: 1
  labels:
    app: springboot
  name: app-deploy
  namespace: default
  resourceVersion: "101983"
  uid: b8b3b4ce-641d-4b4e-9868-12813b1af3a4
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: springboot
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: springboot
    spec:
      containers:
      - image: spring-boot:1.0
        imagePullPolicy: Never
        name: springboot-app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-04-26T12:49:08Z"
    lastUpdateTime: "2023-04-26T12:49:08Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-04-26T12:49:08Z"
    lastUpdateTime: "2023-04-26T12:49:08Z"
    message: ReplicaSet "app-deploy-84cdd65b7b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
