docker-spring-boot/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
spec:
  ingressClassName: default
  rules:
  - host: springboot-app
    http:
      paths:
      - backend:
          service:
            name: springboot-service
            port:
              number: 80
        path: /
        pathType: Prefix
