docker-spring-boot/k8s/ingress_bkp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"springboot-ingress","namespace":"default"},"spec":{"ingressClassName":"default","rules":[{"host":"springboot-app","http":{"paths":[{"backend":{"service":{"name":"springboot-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2023-04-26T13:07:30Z"
  generation: 3
  name: springboot-ingress
  namespace: default
  resourceVersion: "142371"
  uid: ca79f5a1-113e-4f21-bddc-e85d33eb51ab
spec:
  ingressClassName: default
  rules:
  - host: springboot-app
    http:
      paths:
      - backend:
          service:
            name: springboot-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.58.2
