docker-spring-boot/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: springboot
  type: ClusterIP
